fix(dnd-builder): missing translations and search bar icon spacing

--- a/src/styles/_jfSearchInput.scss
+++ b/src/styles/_jfSearchInput.scss
@@ -19,11 +19,11 @@
       border-radius: 0 15px 15px 0;
 
       &.search-icon {
-        left: 4px;
+        left: 8px;
       }
 
       &.search-delete {
-        right: 4px;
+        right: 8px;
 
         &:before {
           content: "";
